--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "ejs-challenge",
+  "name": "y",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,6 +11,9 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "lodash": "^4.17.11"
-  }
+    "lodash": "^4.17.11",
+    "mongoose": "^5.11.17"
+  },
+  "devDependencies": {},
+  "description": ""
 }
